Merged changes with work and made some changes in domain and deleted my GroupRestController.